# ghostbro

./: .gitignore  Cargo.toml  PRD.md  README.md  THREAT_MODEL.md  VULN-FINDINGS.json  VULN-FINDINGS.md
.github/workflows/: ci.yml  release.yml
deploy/: ghost-proxy.service  ghostbro.service
ghost-proxy-bpf-common/: Cargo.toml
ghost-proxy-client/: Cargo.toml
ghost-proxy-client/src/: main.rs
ghost-proxy-common/: Cargo.toml
ghost-proxy-common/src/: keys.rs  lib.rs  spa.rs
ghost-proxy-ebpf/: Cargo.toml
ghost-proxy-ebpf/src/: main.rs
ghost-proxy-server/: Cargo.toml
ghost-proxy-server/src/: config.rs  decoy.rs  ebpf.rs  keys.rs  main.rs  noise.rs  privilege.rs  relay.rs  spa.rs
ghost-proxy-server/src/relay/: normalize.rs
ghostbro-bpf-common/: Cargo.toml
ghostbro-bpf-common/src/: lib.rs
ghostbro-client/: Cargo.toml
ghostbro-client/src/: main.rs
ghostbro-common/: Cargo.toml
ghostbro-common/src/: keys.rs  lib.rs  protocol.rs  seal.rs  spa.rs
ghostbro-ebpf/: Cargo.toml
ghostbro-ebpf/src/: main.rs
ghostbro-server/: Cargo.toml
ghostbro-server/src/: config.rs  decoy.rs  ebpf.rs  keys.rs  main.rs  noise.rs  privilege.rs  relay.rs  spa.rs
xtask/: Cargo.toml
xtask/src/: main.rs
