[package]
name = "ghost-proxy-common"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
