[package]
name = "ghostbro-ebpf"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "ghostbro-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = { version = "0.1.1", features = ["const_assert"] }
aya-log-ebpf = "0.1"
ghostbro-bpf-common = { path = "../ghostbro-bpf-common" }
network-types = "0.2"
