[package]
name = "ghostbro-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "ghostbro-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
aya.workspace = true
aya-log.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
fast-socks5.workspace = true
ghostbro-bpf-common = { path = "../ghostbro-bpf-common", features = ["user"] }
ghostbro-common = { path = "../ghostbro-common" }
httpdate.workspace = true
ipnet.workspace = true
libc.workspace = true
notify.workspace = true
reqwest.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snow.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
